tests/snapshots/ui_test__dashboard_grid_mixes_doorway_and_ic_rows.snap
---
source: tests/ui_test.rs
expression: terminal.backend()
---
"┌─────┐  JORDAN LEE — Eng Manager                         M2"
"│══◆══│  ♥♥♥♥♡  ✓ you: 3d                                   "
"│ ◕‿◕ │  squad 4 ▕▓▓▓▓▓▓▓░▏76%  ⚠ Sam T: mood ↘ · 6w (+2 mor"
"└─────┘  ▸ Space to visit squad                             "
"                                                            "
"╭──── ★ P3 ★ ────╮╭──── ★ P2 ★ ────╮                        "
"│                ││                │                        "
"│     ╔═════╗    ││     ┌─────┐    │                        "
"│     ║ ◕‿◕ ║    ││     │ ◕‿◕ │    │                        "
"│     ╚═════╝    ││     └─────┘    │                        "
"│    Alex Chen   ││    Sam Reyes   │                        "
"│      ♥♥♥♥♡     ││      ♥♥♥♥♡     │                        "
"│  ✓ 5 days ago  ││  ✓ 5 days ago  │                        "
"╰────────────────╯╰────────────────╯                        "
"┌─────┐  CHRIS WONG — Eng Manager                         M2"
"│══◆══│  ♥♥♥♥♡  ✓ you: 3d                                   "
"│ ◕‿◕ │  squad 5 ▕▓▓▓▓▓▓▓▓▏90%  ★ all well · next: Ana P    "
"└─────┘                                                     "
"                                                            "
"╭──── ★ P1 ★ ────╮                                          "
"│                │                                          "
"│     ╭─────╮    │                                          "
"│     │ ◕‿◕ │    │                                          "
"│     ╰─────╯    │                                          "
"│      Jonas     │                                          "
"│      ♥♥♥♥♡     │                                          "
"│  ✓ 5 days ago  │                                          "
"╰────────────────╯                                          "
