tests/snapshots/ui_test__dashboard_hall_header_breadcrumb.snap
---
source: tests/ui_test.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════════╗"
"║                     ⚔ VIBE MANAGER ⚔                     ║"
"╚══════════════════════════════════════════════════════════╝"
" YOU ▸ JORDAN'S SQUAD · 3 members · ▕▓▓▓▓▓▓▓░▏76%           "
"╭Quests──────────────────────╮╭Morale──────────────────────╮"
"│⚠ 1                         ││♥ ♥♥♥♥♡                     │"
"│need attention              ││4.0 morale                  │"
"╰────────────────────────────╯╰────────────────────────────╯"
"╔═ Jordan's Squad ═════════════════════════════════════════╗"
"║╔════ ★ P2 ★ ════╗╭──── ★ P1 ★ ────╮╭──── ★ P3 ★ ────╮    ║"
"║║                ║│                ││                │    ║"
"║║     ┌─────┐    ║│     ╭─────╮    ││     ╔═════╗    │    ║"
"║║     │ ◕‿◕ │    ║│     │ ◕‿◕ │    ││     ║ ◕‿◕ ║    │    ║"
"║║     └─────┘    ║│     ╰─────╯    ││     ╚═════╝    │    ║"
"║║   Sam Taylor   ║│    Kim Diaz    ││    Pat Lopez   │    ║"
"║║      ♥♥♥♥♡     ║│      ♥♥♥♥♡     ││      ♥♥♥♥♡     │    ║"
"║║  ✓ 5 days ago  ║│  ✓ 5 days ago  ││  ✓ 5 days ago  │    ║"
"║╚════════════════╝╰────────────────╯╰────────────────╯    ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
