tests/snapshots/ui_test__doorway_card_healthy_squad.snap
---
source: tests/ui_test.rs
expression: terminal.backend()
---
"┌─────┐  CHRIS WONG — Eng Manager                         M2"
"│══◆══│  ♥♥♥♥♡  ✓ you: 3d                                   "
"│ ◕‿◕ │  squad 5 ▕▓▓▓▓▓▓▓▓▏90%  ★ all well · next: Ana P    "
"└─────┘                                                     "
"                                                            "
