tests/snapshots/ui_test__doorway_card_no_team.snap
---
source: tests/ui_test.rs
expression: terminal.backend()
---
"╭─────╮  SASHA NOVAK — Team Lead                          M1"
"│──◇──│  ♥♥♥♥♡  ✓ you: 3d                                   "
"│ ◕‿◕ │  squad 0 · no members yet                           "
"╰─────╯                                                     "
"                                                            "
