tests/snapshots/ui_test__doorway_card_unselected_blank_hint_line.snap
---
source: tests/ui_test.rs
expression: terminal.backend()
---
"┌─────┐  JORDAN LEE — Eng Manager                         M2"
"│══◆══│  ♥♥♥♥♡  ✓ you: 3d                                   "
"│ ◕‿◕ │  squad 4 ▕▓▓▓▓▓▓▓░▏76%  ⚠ Sam T: mood ↘ · 6w (+2 mor"
"└─────┘                                                     "
"                                                            "
