tests/snapshots/ui_test__doorway_card_worried_manager_sprite_alignment.snap
---
source: tests/ui_test.rs
expression: terminal.backend()
---
"┌─────┐  MOR GAN — Eng Manager                            M2"
"│══◆══│  ♥♥♡♡♡  ✓ you: 3d                                   "
"│◦︵◦ │  squad 4 ▕▓▓▓▓▓▓▓░▏76%  ⚠ Sam T: mood ↘ · 6w (+2 mor" Hidden by multi-width symbols: [(3, " ")]
"└─────┘                                                     "
"                                                            "
